--- a/What We Do.html
+++ b/What We Do.html
@@ -127,26 +127,44 @@
       <img src="env3.PNG" width="1025%">
      </div>
    </div>
+   <div class="img6">
+   <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture39.png"></div>
+   <div class="vpara"><a href="#" style="text-decoration:none"><p>Video Intro<br>
+About Our Company
+    </p></a></div>
   </div>
   <div class="container3">
+    <div class="hpos10" style="font-size:1.3vw;padding-top:1.5vh;font-family: 'Times New Roman', Times, serif;text-align:center">
+      <h1>Road Map</h1></div>
     <div class="para">
       <div class="treeimg">
    <a href="road.html" > <img src="pcp2.PNG" width="100%" height="680px"></a>
   </div>
   </div>
+  <div class="paragraph2" >
+  <p>Our History/Journey</p>
+
+  </div>
+  <div class="paragraph3">
+    <p>11+ Years – A Story of Transformation</p>
+  </div>
   </div>
   <div class="container4">
    
+   
+   
     <div class="hh">
-      <p class="hp">Our Work Process
-      </p>
+      <pre><div class="hp" style="font-size:1.3vw;margin-top:-5.5vh;font-family: 'Times New Roman', Times, serif">
+        <h1>Our Work Process</h1></div></pre>
+        <pre><div style="margin-top:-2.1vw;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
+        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
     </div>
     </div>
     <div class="container5">
 <div class="img4">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture37.png" width="951.9px" height="736px"></div>
+      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture37.png" width="951.9px" height="737px"></div>
       <div class="img5">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture38.png" width="951.9px" height="736px"></div> 
+      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture38.png" width="951.9px" height="736.5px"></div> 
    <div class="h1"><p>Challenges
   </p></div>
 
@@ -159,116 +177,104 @@
       <div  class="arrow"><a href="road.html" style="text-decoration:none;color:blue">&#8680</a></div>
   </div>
   </div>
-  <div class="container6">
+    <div class="container9">
+      <div class="Circle1" style="margin-left:1.6vw;padding-top:18.1vh">
+          <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+          <div style="margin-top:-24vh;margin-left:3vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
+
+          <div class="Circle2" style="margin-left:1.64vw;margin-top:19.3vh">
+              <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+              <div style="margin-top:-24vh;margin-left:3vw;font-size:5vw;color:white;margin-top:-13.4vh"><p>G</p></div>
+
+              <div style="margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-57vh">
+      <p class="para1">Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
+      </p></div>
+      <div style="margin-left:39.5vw;margin-top:-44vh;font-size:0.7vw">
+      <h1>Main Links</h1></div>
+      <div style="margin-left:55.5vw;margin-top:-3.3vh;font-size:0.7vw">
+      <h1>Services</h1></div>
+      <div style="margin-left:79.3vw;margin-top:-3.5vh;font-size:0.7vw;color:white">
+          <h1>Contact Us</h1></div>
+
+<pre><div style="font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh">
+<p><div><a href="#" style="text-decoration:none;color:black">Home</a></div>
+<div><a href="#" style="text-decoration:none;color:black">What We Do</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Who We Are</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Services</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Insights</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Get In Touch</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Careers</a></div>
+<div><a href="#" style="text-decoration:none;color:black">News & Events</a></div>
+</p></div></pre>
+<pre><div style="font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh">
+<p>Engineering Design Solutions
+
+Industrial Automation Solutions
+
+Design Facility Solutions
+
+ERP Tool
+
+Application Services & Modernization
+
+Permanent Hiring
+
+Contract To Contract
+
+Contract to Hire
+
+</p></div></pre>
+<pre><div style="font-weight:bold;margin-left:79.5vw;margin-top:-34.2vh;font-size:1vw;color:white;line-height:2vh"><p>
+Mobile: +91 9640 173 246
+
+Email: info@envisionis-group.com
+</p></div></pre>
+<div style="margin-left:10.45vw;margin-top:35.5vh;font-size:0.7vw">
+  <h1>Locations:-</h1></div>
+  <div style="margin-left:10vw;margin-top:1.4vh;font-size:0.6vw">
+  <h1>Envision Group - Telangana, Hyderabad</h1></div>
+  <div style="margin-left:39.2vw;margin-top:-4.4vh;font-size:0.6vw">
+  <h1>Envision Group - Pune, Maharashtra</h1></div>
+  <div style="margin-left:67vw;margin-top:-4.4vh;font-size:0.6vw">
+  <h1>Envision Group – Bangalore, Karnataka</h1></div>
 
 
-<div class="getparagraph">
-<div class="getp">
-  <p>Envision Integrated Services function as a full stakeholder to business, offering a consulting-led approach with an integrated portfolio of technology that encompass the entire Enterprise value chain. Our Customer-centric Engagement Model defines how we do engage with you, offering specialized services and solutions that meet the distinct needs of your business.
-  </p>
-</div>
-<div class="main" style="display: flex;">
-  <div class="box1">
-    <div class="man">
-    <strong >Main Links</strong><br><br>
-  </div>
-  <div class="hm">
-   <a href="Home.html" style="text-decoration:none;color: black;" >HOME</a><br><br>
-  </div>
-  <div class="ab">
-   <a href="About Us.html" style="text-decoration:none;color:black;">What We Do </a><br><br>
-  </div>
-  <div class="ind1">
-   <a href="INDESTRIAL ORIANTED.html" style="text-decoration:none;color:black;">Who We Are </a> <br><br>
-  </div>
-  <div class="tech">
-   <a href="Techno talks.html"  style="text-decoration:none;color:black;">Services </a><br><br>
-  </div>
-  <div class="place">
-   <a href="Placements.html"  style="text-decoration:none;color:black;">Insights </a><br><br>
-  </div>
-  <div class="enr">
-  <a href="Enroll.html"  style="text-decoration:none;color:black;">Get In Touch </a>
-   </div>
-   <div class="car">
-    <a href="Enroll.html"  style="text-decoration:none;color:black;">Careers </a>
-     </div>
-     <div class="newe">
-      <a href="Enroll.html"  style="text-decoration:none;color:black;">News & Events  </a>
-       </div>
-  </div>
-</div>
-  <div class="box2">
-    <div class="service">
-    <strong>Services</strong> <br><br>
-  </div>
-  <div class="eds">
-    <p >Engineering Design Solutions</p><br>
-  </div>
-  <div class="ind">
- <a href="Mechanical engineering.html" style="text-decoration:none;color:black;"><p>Industrial Automation Solutions</p></a><br>
-</div>
-<div class="desig">
- <a href="FIXTURE  DESIGN.html" style="text-decoration:none;color:black;"><p >Design Facility Solutions</p></a><br>
-</div>
-<div class="erp">
- <p >ERP Tool</p><br>
-</div>
-<div class="angular">
-  <a href="Angular.html" style="text-decoration:none;color:black;"><p>Application Services & Modernization</p></a><br>
-</div>
-<div class="parmanent">
-  <p >Permanent Hiring</p>
-</div>
-<div class="contractab">
-  <p >Contract To Contract</p>
-</div>
-<div class="contractus">
+  <div style="margin-left:10vw;margin-top:1.8vh;font-size:1vw"><p>#913, Manjeera Trinity Corporate,<br> 
+9th floor, Office No.913,<br> 
+KPHB, Hyderabad, India - 500085</p></div>
+<div style="margin-left:39.2vw;margin-top:-8.8vh;font-size:1vw">
+<p>Suratwala Mark, Wakad Road,<br>
+8th floor, Office No.810,<br> 
+Opposite to KFC, Pune, India - 411057</p></div>
+<div style="margin-left:67vw;margin-top:-8.8vh;font-size:1vw">
+<p>#24, Gr. Piston, 2nd floor, Office No.201,<br> 
+Banashankari 3rd Stage,<br> 
+Bangalore, India - 560085</p></div>
+<div style="margin-left:10vw;margin-top:2vh;font-size:0.6vw">
+<h1>Envision Group – Tamil Nadu, Chennai</h1></div>
+<div style="margin-left:39.2vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision GmbH – Germany, Europe</h1></div>
+<div style="margin-left:67vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision SRL– Romania, Europe</h1></div>
+<div style="margin-left:10vw;margin-top:1.3vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br>
+xth floor, Office No.xxx,<br>
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx</p>
+<div style="margin-left:29.3vw;margin-top:-6vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br>
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
+<div style="margin-left:57vw;margin-top:-6vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br> 
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
 
-  <p>Contract to Hire</p>
-</div>
+
   </div>
-<div class="box3">
-<div class="con">
-  <strong>Contact Us
-  </strong>
-</div><br>
-<div class="mb">
-  <p>Mobile: +91 9640 173 246
-  </p>
-</div><br>
-<div class="em">
-  <p>Email: info@envisionis-group.com
-  </p>
-</div>
-</div>
 
-</div>
-<div class="circlea"><p class="leta">E</p></div>
-    <div class="circleb"><p class="letb">G</p></div>
 
-    <div class="location">
-      <div class="locn">
-        <p>Locations:-
-        </p>
-      </div>
-      <div class="engl">
-    <strong>Envision Group - Telangana, Hyderabad </strong>
-      </div>
-      <div class="manjira">
-        <p>#913, Manjeera Trinity Corporate, </p>
-      </div>
-      <div class="floor">
-        <p>9th floor, Office No.913,
-        </p>
-      </div>
-      <div class="kphb">
-        <p>KPHB, Hyderabad, India - 500085
-        </p>
-      </div>
-   </div>
-    </div>
- 
  
 
 
@@ -298,7 +304,8 @@
     <img src="googles.png" width="70%">
   </div>
   <div class="uu">
-    <img src="youtube.png" width="78%" height="86%">
+    <img src="youtube.png" width="78%" height="70%">
+  </div>
   </div>
   
 </body>
