--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -70,7 +70,7 @@
           </div>
           </li>
           <div class="Insights">
-            <li><a  href="TECHNO TALKS.html"><p  class="styo">Insights </p></a></li>
+            <li><a  href="insights.html"><p  class="styo">Insights </p></a></li>
           </div>
           <div class="getin">
           <li><a href="PLACEMENTS.html"><p class="styo" style="">Get in touch</p></a></li>
@@ -119,7 +119,7 @@
 
 
       </div>
-      <div class="me" style="margin-top:-176px;margin-left:800px;font-size:36px">
+      <div class="me" style="margin-top:-176px;margin-left:800px;font-size:36px;color:black">
           <p>Global Experience</p>
         </div>
       <div class="co" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -304,6 +304,124 @@ dots[slideIndex-1].className += " active";
     <div class="ppos9">
     <p>More</p></div>
   </div>
+</div>
+<div class="container4">
+  <div class="img9">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture40.png" width="951.3vw" height="808.7vh">
+  </div>
+  <div class="img10">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture41.png" width="951.5vw" height="808.7vh">
+  </div>
+  <div class="bpos">
+<b>Celebrate</b></div>
+<div class="para2"><p>what you have</p> </div>
+<div class="para3"><p>accomplished, but raise the </p> </div>
+<div class="para4"><p>bar a little higher </p> </div>
+<div class="para5"><p>when you  </p> </div>
+<div class="para6"><b>succeed.</b> </div>
+<div class="rd">
+  <div class="ppos10">
+  <p>See</p></div>
+  <div class="ppos11">
+  <p>More</p></div>
+</div>
+</div>
+
+<div class="container9">
+  <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
+      <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+      <div style="margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
+
+      <div class="Circle2" style="margin-left:1.64vw;margin-top:19.6vh">
+          <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
+          <div style="margin-top:-24vh;margin-left:3vw;font-size:5vw;color:white;margin-top:-13.4vh"><p>G</p></div>
+
+          <div style="margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh">
+  <p class="para">Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
+  </p></div>
+  <div style="margin-left:39.35vw;margin-top:-43.8vh;font-size:0.7vw">
+  <h1>Main Links</h1></div>
+  <div style="margin-left:55.5vw;margin-top:-3.3vh;font-size:0.7vw">
+  <h1>Services</h1></div>
+  <div style="margin-left:79.3vw;margin-top:-3.5vh;font-size:0.7vw;color:white">
+      <h1>Contact Us</h1></div>
+
+<pre><div style="font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh">
+<p><div><a href="#" style="text-decoration:none;color:black">Home</a></div>
+<div><a href="#" style="text-decoration:none;color:black">What We Do</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Who We Are</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Services</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Insights</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Get In Touch</a></div>
+<div><a href="#" style="text-decoration:none;color:black">Careers</a></div>
+<div><a href="#" style="text-decoration:none;color:black">News & Events</a></div>
+</p></div></pre>
+<pre><div style="font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh">
+<p>Engineering Design Solutions
+
+Industrial Automation Solutions
+
+Design Facility Solutions
+
+ERP Tool
+
+Application Services & Modernization
+
+Permanent Hiring
+
+Contract To Contract
+
+Contract to Hire
+
+</p></div></pre>
+<pre><div style="font-weight:bold;margin-left:79.5vw;margin-top:-34.2vh;font-size:1vw;color:white;line-height:2vh"><p>
+Mobile: +91 9640 173 246
+
+Email: info@envisionis-group.com
+</p></div></pre>
+<div style="margin-left:10.45vw;margin-top:35.5vh;font-size:0.7vw">
+<h1>Locations:-</h1></div>
+<div style="margin-left:10.5vw;margin-top:1.4vh;font-size:0.6vw">
+<h1>Envision Group - Telangana, Hyderabad</h1></div>
+<div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision Group - Pune, Maharashtra</h1></div>
+<div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision Group - Bangalore, Karnataka</h1></div>
+
+
+<div style="margin-left:10.5vw;margin-top:1.5vh;font-size:1vw"><p>#913, Manjeera Trinity Corporate,<br> 
+9th floor, Office No.913,<br> 
+KPHB, Hyderabad, India - 500085</p></div>
+<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+<p>Suratwala Mark, Wakad Road,<br>
+8th floor, Office No.810,<br> 
+Opposite to KFC, Pune, India - 411057</p></div>
+<div style="margin-left:67.7vw;margin-top:-7.3vh;font-size:1vw">
+<p>#24, Gr. Piston, 2nd floor, Office No.201,<br> 
+Banashankari 3rd Stage,<br> 
+Bangalore, India - 560085</p></div>
+<div style="margin-left:10.5vw;margin-top:2vh;font-size:0.6vw">
+<h1>Envision Group - Tamil Nadu, Chennai</h1></div>
+<div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision GmbH - Germany, Europe</h1></div>
+<div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
+<h1>Envision SRL - Romania, Europe</h1></div>
+<div style="margin-left:10.5vw;margin-top:1.3vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br>
+xth floor, Office No.xxx,<br>
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx</p></div>
+<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br>
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
+<div style="margin-left:67.7vw;margin-top:-7.2vh;font-size:1vw">
+<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
+xth floor, Office No.xxx,<br> 
+xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
+</p></div>
+
+
 </div>
 
 
