--- a/insights.html
+++ b/insights.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="What We Do.css">
+    <link rel="stylesheet" href="insights.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,7 +52,7 @@
   
         <ul>
           <div class="what">
-            <li><a style="color:blue;" href="#"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
+            <li><a  href="What We Do.html"><p  class="styo" style="margin-left:-141.5px;margin-top:-52.2px">What We Do</p></a></li><br>
           </div><br>
           <div class="Whos">
             <li><a  href="WhoWeAre.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Who We Are</p><i class=""></i></a>
@@ -66,7 +66,7 @@
           </div>
           </li>
           <div class="Insights">
-            <li><a  href="insights.html"><p  class="styo" style="margin-left:-141.5px;margin-top:315px">Insights </p></a></li>
+            <li><a  style="color:blue" href="insights.html"><p  class="styo" style="margin-left:-141.5px;margin-top:315px">Insights </p></a></li>
           </div>
           <div class="getin">
           <li><a href="PLACEMENTS.html"><p class="styo" style="margin-left:-141.5px;margin-top:315px">Get in touch</p></a></li>
@@ -75,114 +75,7 @@
         </div>
     </div>
     </div>
-    <div class="container">
-        <div class="paragraph">
-      <pre><div class="aboutt">
-      <p>About Us</p>
-      </div></pre>
-     <pre><div class="p1">
-        <p>Engineering modern business to</p></div></pre>
-        <pre><div class="p3">
-        <p> improve everyday lives
-        </p>
-      </div></pre>
-      <div class="p2">
-        <p>Let us help you discover new ways of operating so you can anticipate and act,<br> as if on intuition.
-        </p>
-      </div>
-    </div>
-    <div class="circle"><p class="let">E</p></div>
-    <div class="circle2"><p class="lets">G</p></div>
-    </div>
-   
-       
-   <div class="container2">
-    <div class="paragraph-2">
-    <div class="pp1">
-      <p>Mission is to bring the power<br> of Industrial Automation to<br> every Business
-      </p>
-    </div>
     
-    <div class="pp2">
-      <p>Envision Integrated Services function as a full stakeholder to business, offering a consulting-led approach<br> with an integrated portfolio of technology that encompass the entire Enterprise value chain. Our<br> Customer-centric Engagement Model defines how we do engage with you, offering specialized services<br> and solutions that meet the distinct needs of your business.
-      </p>
-    </div>
-    <div class="pp3">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations. We empowered to provide<br> Customers a single window to industry specific solutions, route them to deliver their business goals and<br> drive technology led transformations.
-      </p>
-    </div>
-    <div class="pp4">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations.
-      </p>
-    </div>
-    <div class="circle3"><p class="let1">11+ Years Of<br><p class="pp"> Experience</p>
-    </p></div>
-    <div class="img1">
-      <img src="env1.PNG" width="400px" height="430px">
-    </div>
-     <div class="img2">
-      <img src="env2.PNG" width="520%">
-     </div>
-     <div class="img3">
-      <img src="env3.PNG" width="1025%">
-     </div>
-   </div>
-   <div class="img6">
-   <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture39.png"></div>
-   <div class="vpara"><a href="#" style="text-decoration:none"><p>Video Intro<br>
-About Our Company
-    </p></a></div>
-  </div>
-  <div class="container3">
-    <div class="hpos10" style="font-size:1.3vw;padding-top:0.8vh;font-family: 'Times New Roman', Times, serif;text-align:center">
-      <h1>Road Map</h1></div>
-      <pre><div style="margin-top:-4vh;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
-        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
-    <div class="para">
-      <div class="treeimg">
-   <a href="road.html" > <img src="pcp2.PNG" width="100%" height="650px"></a>
-  </div>
-  </div>
-  <div class="paragraph2" >
-  <p>Our History/Journey</p>
-
-  </div>
-  <pre><div class="paragraph3">
-    <p>11+ Years - A Story of Transformation</p>
-  </div></pre>
-  </div>
-  <div class="container4">
-   
-   
-   
-    <div class="hh">
-      <pre><div class="hp" style="font-size:1.3vw;margin-top:-5.5vh;font-family: 'Times New Roman', Times, serif">
-        <h1>Our Work Process</h1></div></pre>
-        <pre><div style="margin-top:-2.1vw;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
-        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
-    </div>
-    </div>
-    <div class="container5">
-<div class="img4">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture37.png" width="951.9px" height="737px"></div>
-      <div class="img5">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture38.png" width="951.5px" height="736.5px"></div> 
-   <div class="h1"><p>Challenges
-  </p></div>
-
-  <div class="h2">
-    <p>Solutions
-    </p>
-  </div>
-  <div class="ppos16">
-  <p>Learn</p></div>
-  <div class="ppos17">
-  <p>More</p></div>
-  <div class="circle5">
-   
-      <div  class="arrow"><a href="road.html" style="text-decoration:none;color:blue">&#8680</a></div>
-  </div>
-  </div>
     <div class="container9">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
           <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
