--- a/engineeringdesignsolutions.html
+++ b/engineeringdesignsolutions.html
@@ -75,115 +75,29 @@
         </div>
     </div>
     </div>
-    <div class="container">
-        <div class="paragraph">
-      <pre><div class="aboutt">
-      <p>About Us</p>
-      </div></pre>
-     <pre><div class="p1">
-        <p>Engineering modern business to</p></div></pre>
-        <pre><div class="p3">
-        <p> improve everyday lives
-        </p>
-      </div></pre>
-      <div class="p2">
-        <p>Let us help you discover new ways of operating so you can anticipate and act,<br> as if on intuition.
-        </p>
-      </div>
-    </div>
-    <div class="circle"><p class="let">E</p></div>
-    <div class="circle2"><p class="lets">G</p></div>
-    </div>
-   
-       
-   <div class="container2">
-    <div class="paragraph-2">
-    <div class="pp1">
-      <p>Mission is to bring the power<br> of Industrial Automation to<br> every Business
-      </p>
-    </div>
-    
-    <div class="pp2">
-      <p>Envision Integrated Services function as a full stakeholder to business, offering a consulting-led approach<br> with an integrated portfolio of technology that encompass the entire Enterprise value chain. Our<br> Customer-centric Engagement Model defines how we do engage with you, offering specialized services<br> and solutions that meet the distinct needs of your business.
-      </p>
-    </div>
-    <div class="pp3">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations. We empowered to provide<br> Customers a single window to industry specific solutions, route them to deliver their business goals and<br> drive technology led transformations.
-      </p>
-    </div>
-    <div class="pp4">
-      <p>We empowered to provide Customers a single window to industry specific solutions, route them to<br> deliver their business goals and drive technology led transformations.
-      </p>
-    </div>
-    <div class="circle3"><p class="let1">11+ Years Of<br><p class="pp"> Experience</p>
-    </p></div>
-    <div class="img1">
-      <img src="env1.PNG" width="400px" height="430px">
-    </div>
-     <div class="img2">
-      <img src="env2.PNG" width="520%">
-     </div>
-     <div class="img3">
-      <img src="env3.PNG" width="1025%">
-     </div>
-   </div>
-   <div class="img6">
-   <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture39.png"></div>
-   <div class="vpara"><a href="#" style="text-decoration:none"><p>Video Intro<br>
-About Our Company
-    </p></a></div>
+   <div class="container1" style="height:87.7vh;
+   background-color:green;margin-top:113px;">
+   <div class="image1">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
   </div>
-  <div class="container3">
-    <div class="hpos10" style="font-size:1.3vw;padding-top:0.8vh;font-family: 'Times New Roman', Times, serif;text-align:center">
-      <h1>Road Map</h1></div>
-      <pre><div style="margin-top:-4vh;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
-        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
-    <div class="para">
-      <div class="treeimg">
-   <a href="road.html" > <img src="pcp2.PNG" width="100%" height="650px"></a>
-  </div>
-  </div>
-  <div class="paragraph2" >
-  <p>Our History/Journey</p>
-
-  </div>
-  <pre><div class="paragraph3">
-    <p>11+ Years - A Story of Transformation</p>
-  </div></pre>
-  </div>
-  <div class="container4">
-   
-   
-   
-    <div class="hh">
-      <pre><div class="hp" style="font-size:1.3vw;margin-top:-5.5vh;font-family: 'Times New Roman', Times, serif">
-        <h1>Our Work Process</h1></div></pre>
-        <pre><div style="margin-top:-2.1vw;text-align:center;font-size:1.1vw;font-family: 'Times New Roman', Times, serif">
-        <p>Our numbers speak for themselves. We are a step ahead in every segment</p></div></pre>
-    </div>
-    </div>
-    <div class="container5">
-<div class="img4">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture37.png" width="951.9px" height="737px"></div>
-      <div class="img5">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture38.png" width="951.5px" height="736.5px"></div> 
-   <div class="h1"><p>Challenges
-  </p></div>
-
-  <div class="h2">
-    <p>Solutions
-    </p>
-  </div>
-  <div class="ppos16">
-  <p>Learn</p></div>
-  <div class="ppos17">
-  <p>More</p></div>
-  <div class="circle5">
-   
-      <div  class="arrow"><a href="road.html" style="text-decoration:none;color:blue">&#8680</a></div>
-  </div>
-  </div>
-    <div class="container9">
+  <div class="hpos1" style="margin-left:30px;margin-top:-790px;color:black">
+   <h1>ENGINEERING DESIGN SOLUTIONS
+   </h1>
+</div>
+<div class="ppos1" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:20px">
+<p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br> specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br> industry.</p></div>
+<div class="image2" style="margin-left:1390px;margin-top:-140px">
+<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
+<div class="ppos2" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-140px">
+<p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br> An engineer's engineering design services begin with conceptualization and ideation, during which he or<br> she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br> functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
+</p> </div> 
+<div class="image3" style="margin-left:1250px;margin-top:-30px">
+  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>
+<div class="ppos3" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-250px">
+<p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br> to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br> specifications and are capable of handling the anticipated loads and forces. Engineering design services<br> often involve simulation and analysis to assess the performance and behavior of the design under various<br> conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br> specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br> desired specifications and standards.
+</p></div>
+</div>
+    <div class="container9" style="margin-top:113px">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
           <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
           <div style="margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
