--- a/IndustrialAutomationSolutions.html
+++ b/IndustrialAutomationSolutions.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="What We Do.css">
+    <link rel="stylesheet" href="IndustrialAutomationSolutions.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -85,9 +85,13 @@
                 <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture54.PNG" width="500px" height="280px"></div>
                 <div class="image3" style="margin-left:140px;margin-top:-20px" >
                     <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture55.PNG" width="500px" height="280px"></div>
-        <p>Envision specializes in BIW (Body-in-White) robotics simulation & our advanced simulation<br> solutions are designed to optimize and streamline the automation processes in the<br> automotive industry. Using advanced technologies and systems, mechanical engineers can<br> automate and optimize industrial processes, increase productivity, and improve<br> operational efficiency with industrial automation solutions. Industrial automation solutions<br> typically integrate hardware, software, and control systems to streamline operations and<br> reduce manual intervention. 
-            Here are some of their key features:
-            </p>
+                    <div class="parapos1" style="margin-left:700px;margin-top:-550px;color:white;font-size:30px;line-height:40px">
+        <p>Envision specializes in BIW (Body-in-White) robotics simulation & our advanced simulation<br> solutions are designed to optimize and streamline the automation processes in the<br> automotive industry. Using advanced technologies and systems, mechanical engineers can<br> automate and optimize industrial processes, increase productivity, and improve<br> operational efficiency with industrial automation solutions. Industrial automation solutions<br> typically integrate hardware, software, and control systems to streamline operations and<br> reduce manual intervention. 
+            <br>Here are some of their key features:
+            </p></div>
+            <div class="parapos2" style="margin-left:700px;margin-top:40px;color:white;font-size:30px;line-height:40px">
+            <p>In industrial automation, robots are often used to perform repetitive or complex tasks with<br> accuracy and efficiency. Advanced software tools are used to simulate & optimize the<br> robotic processes involved in BIW assembly, such as welding, handling & material<br> placement. Using state-of-the-art robotic simulation software, we virtually program and<br> validate robot trajectories and sequences. This allows us to verify the feasibility and<br> accuracy of the robot's movements, ensuring collision-free operations, optimizing cycle<br> times, and improving overall productivity. Virtual programming minimizes the need for<br> physical prototypes and enables quick iterations and adjustments.</p>
+</div>
                 </div>
     
     <div class="container9" style="margin-top:113px">
