--- a/What We Do.html
+++ b/What We Do.html
@@ -87,7 +87,7 @@
         </p>
       </div></pre>
       <div class="p2">
-        <p>Let us help you discover new ways of operating so you can anticipate and act,<br> as if on intuition.
+        <p>Let us help you discover new ways of operating so you can anticipate<br> and act,as if on intuition.
         </p>
       </div>
     </div>
