--- a/buildinginformationmodelling.html
+++ b/buildinginformationmodelling.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="engineeringdesignsolutions.css">
+    <link rel="stylesheet" href="buildinginformationmodelling.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -75,46 +75,20 @@
         </div>
     </div>
     </div>
-   <div class="container1" style="height:87.7vh;
-   background-color:green;margin-top:113px;">
-   <div class="image1">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
-  </div>
-  <div class="hpos1" style="margin-left:30px;margin-top:-790px;color:black">
-   <h1>ENGINEERING DESIGN SOLUTIONS
-   </h1>
-</div>
-<div class="ppos1" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:20px">
-<p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br> specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br> industry.</p></div>
-<div class="image2" style="margin-left:1390px;margin-top:-140px">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
-<div class="ppos2" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-140px">
-<p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br> An engineer's engineering design services begin with conceptualization and ideation, during which he or<br> she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br> functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
-</p> </div> 
-<div class="image3" style="margin-left:1250px;margin-top:-30px">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>
-<div class="ppos3" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-250px">
-<p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br> to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br> specifications and are capable of handling the anticipated loads and forces. Engineering design services<br> often involve simulation and analysis to assess the performance and behavior of the design under various<br> conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br> specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br> desired specifications and standards.
-</p></div>
-</div>
-<div class="container2">
-  <div class="image2">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
-  </div>
-  <div class="hpost3">
-  <h1>IMPLEMENTATION</h1></div>
-  <div class="parapost2">
-  <p>We provide comprehensive documentation, including detailed drawings, bill of materials (BOM), and assembly<br> instructions, to facilitate smooth integration of the fixtures into the manufacturing process. Envision is committed to<br> delivering exceptional BIW fixture design solutions that optimize production processes, improve product quality, and<br> enhance overall operational efficiency. <br><br>
-
-Engineering design services aim to optimize a design for performance, cost, manufacturability, and other factors. Based<br> on feedback, testing results, and client requests, engineers iterately refine the design. In this way, the most effective and<br> efficient design solution is achieved.</p>
-
-</div>
-<div class="image10">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture59.PNG" width="1895px"></div>
-<div class="image11">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture58.PNG" width="1895px"></div>
-</div>
-    <div class="container9" style="margin-top:113px">
+    <div class="container1">
+        <div class="image9">
+            <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture57.PNG" width="1902.5px" height="806.6px"></div>
+            <div class="hpost2"><h1>BUILDING INFORMATION MODELLING</h1></div>
+           <div class="parapost1">
+            <p>BIM is a process of generating and managing building data during its complete Life cycle, from conceptual design  through operation of<br> the building.    It is an integrated Work flow that enables architects, engineers, and builders to explore a project digitally before it is built.</p>
+            BIM is a modern technology and associated set of  processes to produce, communicate, and analyze 'building<br> models'. Digital representations of the building components that follow parametric rules, which can be<br> manipulated in an intelligent Fashion.<br>
+            Carry 'computable graphic and non-redundant data attributes' which are consistent, coordinated which can be<br> viewed</p></div>
+            <div class="smallrec4" style="padding-left:36vw;margin-top:-20vh">
+              <div id="rectangle1" style="width:11vw;height:4vh;border-style:solid;border-width:0.2vw;background-color:gray">
+              </div></div>
+            
+        </div>
+    <div class="container9">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
           <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
           <div style="margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
