--- a/dummy1.html
+++ b/dummy1.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Envisionis Group</title>
-        <link rel="stylesheet" type="text/css" href="home.css">
+        <link rel="stylesheet" type="text/css" href="dummy1.css">
         <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
                               
