--- a/services1.html
+++ b/services1.html
@@ -124,7 +124,7 @@
             <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture28.PNG">
           </div>
           <div class="rd">
-            <a href="readmore.html" style="text-decoration:none"><p>Read More<i class='fas fa-book-open'></i>
+            <a href="readmore.html" style="text-decoration:none;font-size:28px"><p>Read More<i class='fas fa-book-open'></i>
             </p></a>
           </div>
     </div>
