--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -119,7 +119,7 @@
 
 
       </div>
-      <div class="me" style="margin-top:-176px;margin-left:800px;font-size:36px;color:black">
+      <div class="me" style="margin-top:-220px;margin-left:800px;font-size:36px;color:black">
           <p>Global Experience</p>
         </div>
       <div class="co" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -152,7 +152,7 @@
 
 
         </div>
-        <div class="me" style="margin-top:-276px;margin-left:800px;font-size:36px">
+        <div class="me" style="margin-top:-271.8px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
         <div class="co" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -183,7 +183,7 @@
 
 
         </div>
-        <div class="me2" style="margin-top:-250px;margin-left:800px;font-size:36px">
+        <div class="me2" style="margin-top:-246.5px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
         <div class="co2" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -213,7 +213,7 @@
 
 
         </div>
-        <div class="me3" style="margin-top:-280px;margin-left:800px;font-size:36px">
+        <div class="me3" style="margin-top:-274px;margin-left:800px;font-size:36px">
             <p>Global Experience</p>
           </div>
         <div class="co3" style="margin-top:-41.5px;margin-left:1250px;font-size:36px">
@@ -287,7 +287,7 @@ dots[slideIndex-1].className += " active";
     <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture26.png" width="951.3vw" height="808.7vh">
   </div>
   <div class="ppos2">
-  <p>“Great things in bu</p></div>
+  <p>'' Great things in bu</p></div>
   <div class="ppos3">
   <p>siness are never done by</p></div>
   <div class="ppos4">
@@ -297,7 +297,7 @@ dots[slideIndex-1].className += " active";
   <div class="ppos6">
   <p>peo</p></div>
   <div class="ppos7">
-  <p>ple”.</p></div>
+  <p>ple ''.</p></div>
   <div class="rd">
     <div class="ppos8">
     <p>See</p></div>
