--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="engineeringdesignsolutions.css">
+    <link rel="stylesheet" href="digitalfacilitysolutions.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -75,44 +75,18 @@
         </div>
     </div>
     </div>
-   <div class="container1" style="height:87.7vh;
-   background-color:green;margin-top:113px;">
-   <div class="image1">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
-  </div>
-  <div class="hpos1" style="margin-left:30px;margin-top:-790px;color:black">
-   <h1>ENGINEERING DESIGN SOLUTIONS
-   </h1>
-</div>
-<div class="ppos1" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:20px">
-<p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br> specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br> industry.</p></div>
-<div class="image2" style="margin-left:1390px;margin-top:-140px">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
-<div class="ppos2" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-140px">
-<p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br> An engineer's engineering design services begin with conceptualization and ideation, during which he or<br> she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br> functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
-</p> </div> 
-<div class="image3" style="margin-left:1250px;margin-top:-30px">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>
-<div class="ppos3" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-250px">
-<p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br> to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br> specifications and are capable of handling the anticipated loads and forces. Engineering design services<br> often involve simulation and analysis to assess the performance and behavior of the design under various<br> conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br> specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br> desired specifications and standards.
-</p></div>
-</div>
-<div class="container2">
-  <div class="image2">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
-  </div>
-  <div class="hpost3">
-  <h1>IMPLEMENTATION</h1></div>
-  <div class="parapost2">
-  <p>We provide comprehensive documentation, including detailed drawings, bill of materials (BOM), and assembly<br> instructions, to facilitate smooth integration of the fixtures into the manufacturing process. Envision is committed to<br> delivering exceptional BIW fixture design solutions that optimize production processes, improve product quality, and<br> enhance overall operational efficiency. <br><br>
-
-Engineering design services aim to optimize a design for performance, cost, manufacturability, and other factors. Based<br> on feedback, testing results, and client requests, engineers iterately refine the design. In this way, the most effective and<br> efficient design solution is achieved.</p>
-
-</div>
-<div class="image10">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture59.PNG" width="1895px"></div>
-<div class="image11">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture58.PNG" width="1895px"></div>
+    <div class="container1">
+        <div class="image8">
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture56.PNG" width="1902.5px" height="919px"></div>
+        <div class="hpost1"><h1>DIGITAL FACILITY SOLUTIONS</h1></div>
+        <div class="parapos3">
+        <p>2D layout has traditionally been the easiest method for factory design. But restricting<br> oneself to 2D carries a lot of risks.<br> 
+For example, collisions due to insufficient headroom are often only discovered<br> during construction. The costs of modifying a design at this stage of a project are at their<br> highest, and the associated delays affect the duration of the entire project.<br> Misunderstandings can easily arise leading to costly design and construction errors.<br>Furthermore, when working in 2D, all views of a design have to be manually drafted, and<br> then individually updated with each design change.<br>With a 3D approach, a single 3D design model is created, from which all the required<br> drawings are automatically generated. This represents a considerable time saving over the<br> life of a typical project, and also avoids the risk of introducing human error while manually<br> drafting individual views</p>
+</div> 
+<div class="image2" style="margin-left:1390px;margin-top:-480px">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
+    <div class="image3" style="margin-left:1250px;margin-top:-40px">
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>   
 </div>
     <div class="container9" style="margin-top:113px">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
