--- a/readmore.html
+++ b/readmore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Services</title>
-    <link rel="stylesheet" href="services1.css">
+    <link rel="stylesheet" href="readmore.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -140,12 +140,12 @@
    SOLUTIONS
 </b></a></div></pre>
 <pre><div class="apos3" style="color:white;
-  margin-left:30px;margin-top:330px;font-size:30px"><a href="#" style="text-decoration:none;color:white"><b>3. DIGITAL 
+  margin-left:30px;margin-top:330px;font-size:30px"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><b>3. DIGITAL 
    FACILITY
    SOLUTIONS
 </b></a></div></pre>   
 <pre><div class="apos4" style="color:white;
-  margin-left:1600px;margin-top:-110px;font-size:30px"><a href="#" style="text-decoration:none;color:white"><b>4. BUILDING 
+  margin-left:1600px;margin-top:-110px;font-size:30px"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><b>4. BUILDING 
    INFORMATION 
    MODELLING
 
